# manga-suku

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/models/: manga.rs
src/routes/: goldenmanga.rs  manga.rs  mangalivre.rs  mangayabu.rs  mod.rs
src/scraper/: goldenmanga.rs  mangalivre.rs  mangayabu.rs
tests/: mangayabu_routes.rs
