[package]
name = "manga_suku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
scraper = "0.14.0"
shuttle-service = { version = "0.10.0", features = ["web-rocket"] }
